add rest of crud for records
